Unreleased
____
- Add support for proxies

1.16.6
____
- Fix family tag caching when no tags are returned

1.16.5
____
- Add verdict and sub_verdict properties to FileAnalysis
- Retry ConnectionError

1.16.4
____
- Parse the token expiration as utc timestamp
- Add composed only flag to latest hash analysis

1.16.3
____
- Parse the token expiration as utc timestamp

1.16.2
____
- Family info returns also tags related to family

1.16.1
____
- Fix equals to check by reference as well

1.16
____
- Use token expiration to auto renew the token
- Add 'from_family_id' class method to Family
- Made IntezerAPI private module
- Rename IntezerProxy to IntezerApiClient
- Raises InsufficientPermissionsError when accessing enterprise routes that aren't available for the plan
- Raise InvalidApiKey on any 401 response
- Analysis and Family are now comparable
- Add account routes and object

1.15.2
-------
- Fix JSON deserialization of endpoint scan results

1.15.1
-------
- Add 'is_analysis_running' method to Analysis class.
- Add 'running_analysis_duration' method to Analysis class.
- Add 'authenticate' method to IntezerProxy class

1.15.0
-------
- Support for offline endpoint scan uploading in 'EndpointAnalysis'.

1.14.4
-------
- Add analysis time to analysis object

1.14.3
-------
- Add check status for operation

1.14.2
-------
- Fix analyze-by-hash with command line args


1.14.1
-------
- Fix: analyze url route

1.14
-------
- Add enums for the basic consts: SoftwareType, FileAnalysisVerdict, URLAnalysisVerdict, EndpointAnalysisVerdict.
- Support getting analyses history (url\file\endpoint) from server.
- New On-premise version support.
- Python 3.11 Support.

1.13
-------
- Add detection report
- Add sandbox command line arguments option for analyses

1.12
-------
- Add file analysis by download url

1.11.3
-------
- Get EDR alert assessments by edr alert ids

1.11.2
-------
- Add action taken emoji

1.11.1
-------
- Add option to add suffix to user agent

1.11
-------