@@ -1,6 +1,7 @@
 Unreleased
 ____
 - Add support for proxies
+- Remove deprecated edr assessment routes
 
 1.16.6
 ____
